--- a/src/App.scss
+++ b/src/App.scss
@@ -75,9 +75,16 @@ body {
     bottom: -10px;
     left: -10px;
     .message-data {
-      padding: 0 10px;
+      padding: 0 10px 10px 10px;
       border-radius: 8px;
       background-color: rgba(0, 0, 0, .5);
+    }
+    button {
+      background: rgba(0, 0, 0, 0);
+      color: #fff;
+      border: 1px solid #fff;
+      border-radius: 4px;
+      padding: 5px 20px;
     }
   }
   .progress-bar {
