Add quit button

--- a/src/App.scss
+++ b/src/App.scss
@@ -85,6 +85,7 @@ body {
       border: 1px solid #fff;
       border-radius: 4px;
       padding: 5px 20px;
+      margin: 0 2px;
     }
   }
   .progress-bar {
